@@ -93,8 +93,9 @@ $traceNode.getMessageName()
 
 
 #macro ( mediaIncludes )
-<script type="text/javascript" src="static/protovis-r3.2.js"></script>
-<script type="text/javascript" src="static/tipsy.js"></script>
+<script type="text/javascript" src="/static/protovis-r3.2.js"></script>
+<script type="text/javascript" src="/static/avrotrace.js"></script>
+<script type="text/javascript" src="/static/tipsy.js"></script>
 <script src="static/jquery-1.4.2.min.js" type="text/javascript"></script>
 <script src="static/jquery.tipsy.js" type="text/javascript"></script>
 <script src="static/tipsy.js" type="text/javascript"></script>
