@@ -27,7 +27,9 @@
 <p>This input expects newline separated "host:port" pairs. By default, the
 TracePlugin serves tracing data on $default_port.</p>
 
-<textarea rows=10 cols=60 name='servers'>$last_input</textarea>
+<textarea rows="10" cols="60" name="servers">
+$last_input
+</textarea>
 
 
 <input type='submit' name='Start Tracing'>
